<resources>
    <string name="app_name">Cocktail Genie</string>

    <!--Splash and login screen strings-->
    <string name="home_title">Cocktail Genie</string>
    <string name="splash_title">Welcome to Cocktail Genie!</string>
    <string name="server_client_id">1081699142298-sbmu96kn9kk16fbbfcjbmkm8a323o0br.apps.googleusercontent.com</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="reload">Refresh</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="homeBottomBar">Home</string>
    <string name="favoritesBottomBar">Favorites</string>
    <string name="homeIconText">Home</string>
    <string name="favoritesIconText">Favorites</string>
    <string name="searchIconText">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank favorites fragment</string>
    <string name="hello_blank_fragment2">Hello blank search fragment</string>




    <!--test stuff-->
    <string name="search_by_prompt">Search by:</string>

    <string-array name="drink_search_arrays">
        <item>Drink Name</item>
        <item>Alcohol Type</item>
        <item>List All By First Letter</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

</resources>
